<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".verProductos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selCategoria" />

    <Spinner
        android:id="@+id/cmbProductosCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listProductos" />

    <ListView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="395dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantPedir" />

    <EditText
        android:id="@+id/edtProdCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/defectoCantidad"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnProdAddPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregar" />
</LinearLayout>